tests/chapter_17/invalid_types/extra_credit/postfix_decr_void_pointer.c
// Can't apply prefix or postfix ++/-- to pointers to void
void *malloc(unsigned LONG64 size);

int main(void) {
    void *buff = malloc(100);
    buff--;
    return 0;
}